[gd_scene load_steps=22 format=3 uid="uid://bpyqr2dwikw5q"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_prbjj"]
[ext_resource type="Texture2D" uid="uid://bbyp6y7545kyc" path="res://Art/Player/player_idle.png" id="2_lsmsn"]
[ext_resource type="Texture2D" uid="uid://ci18plhvxtrv4" path="res://Art/Player/player_walk_cycle.png" id="3_b2r3h"]
[ext_resource type="AudioStream" uid="uid://k3kqvsj1yc4f" path="res://Sounds/quickwoosh.wav" id="8_jq6y0"]
[ext_resource type="Texture2D" uid="uid://b4sy3yac5wm7x" path="res://Art/Player/Shadow.png" id="8_lnxx2"]
[ext_resource type="Script" path="res://Scripts/player_fall.gd" id="9_5eboo"]
[ext_resource type="AudioStream" uid="uid://cweal1iqrluop" path="res://Sounds/Footsteps125.wav" id="10_m44ro"]
[ext_resource type="AudioStream" uid="uid://dy07o1mawmp5p" path="res://Sounds/LandWood.wav" id="11_brq8o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5a4gc"]
atlas = ExtResource("2_lsmsn")
region = Rect2(0, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f45m"]
atlas = ExtResource("2_lsmsn")
region = Rect2(16, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_tddfw"]
atlas = ExtResource("2_lsmsn")
region = Rect2(0, 0, 16, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh50y"]
atlas = ExtResource("3_b2r3h")
region = Rect2(0, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvqbp"]
atlas = ExtResource("3_b2r3h")
region = Rect2(16, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bs6v"]
atlas = ExtResource("3_b2r3h")
region = Rect2(32, 0, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p414"]
atlas = ExtResource("3_b2r3h")
region = Rect2(48, 0, 16, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_gm1kr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5a4gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f45m")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tddfw")
}],
"loop": true,
"name": &"jump",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh50y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvqbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bs6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p414")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="Gradient" id="Gradient_nr6w2"]
colors = PackedColorArray(1, 1, 1, 0.588235, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1vb77"]
gradient = SubResource("Gradient_nr6w2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6vay6"]
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
color = Color(0.509804, 1, 1, 1)
color_ramp = SubResource("GradientTexture1D_1vb77")

[sub_resource type="AtlasTexture" id="AtlasTexture_dfxyw"]
atlas = ExtResource("2_lsmsn")
region = Rect2(0, 0, 16, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1d4dg"]
size = Vector2(7.5, 5.5)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
y_sort_enabled = true
collision_layer = 2
collision_mask = 2
script = ExtResource("1_prbjj")
pspeed_enabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_gm1kr")
animation = &"idle"

[node name="TrailEffectTransform" type="RemoteTransform2D" parent="AnimatedSprite2D"]
remote_path = NodePath("../../TrailEffect")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.705882)
z_index = -1
position = Vector2(0, 9.5)
texture = ExtResource("8_lnxx2")

[node name="TrailEffect" type="GPUParticles2D" parent="."]
emitting = false
amount = 3
process_material = SubResource("ParticleProcessMaterial_6vay6")
texture = SubResource("AtlasTexture_dfxyw")
lifetime = 0.4
visibility_rect = Rect2(-100, -100, 100, 200)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.75)
shape = SubResource("RectangleShape2D_1d4dg")

[node name="FallDetection" type="StaticBody2D" parent="."]
script = ExtResource("9_5eboo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallDetection"]
position = Vector2(0, 5.75)
shape = SubResource("RectangleShape2D_1d4dg")

[node name="RemoteFallDetection" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../FallDetection")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PSpeedTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=["Player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 5.75)
shape = SubResource("RectangleShape2D_1d4dg")

[node name="Footsteps" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_m44ro")
volume_db = 1.0

[node name="Land" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_brq8o")
volume_db = 1.0

[node name="LandSoundTimer" type="Timer" parent="Land"]
wait_time = 0.1
one_shot = true

[node name="Woosh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_jq6y0")
volume_db = 1.5

[connection signal="player_off_tilemap" from="FallDetection" to="." method="_on_fall_detection_player_off_tilemap"]
[connection signal="player_on_tilemap" from="FallDetection" to="." method="_on_fall_detection_player_on_tilemap"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
